2007-09-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py (MediaView.drag_data_received): handle 
	multiple images in a drag-n-drop

2007-09-04  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/__init__.py: Add MenuOptions
	* src/ReportBase/_MenuOptions.py: Added
	* src/ReportBase/Makefile.am: Add MenuOptions
	* src/plugins/DescendChart.py: Use MenuOptions
	* src/plugins/AncestorChart.py: Use MenuOptions
	* src/plugins/FanChart.py: Use MenuOptions
	* src/Utils.py (get_type_converter): Handle boolean types.

2007-09-03  Don Allingham  <don@gramps-project.org>
	* plugins/WritePkg.py: fix package export
	* GrampsDbUtils/_WriteXML.py: fix package export

2007-09-03  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/gtkprintpreview.glade: Hide Print button for now.
	* src/docgen/GtkPrint.py: Print dialog comes back after Preview is
	finished. Print settings properly saved and reapplied.

2007-09-01  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: Fix note level (bug #1204)

2007-09-01  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py (check_in): don't expect stdin to be open (#1203)

2007-09-01  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/images/16x16/gramps-event.png:
	* src/images/16x16/gramps-family.png:
	* src/images/22x22/gramps-event.png:
	* src/images/22x22/gramps-family.png:
	* src/images/48x48/gramps-event.png:
	* src/images/48x48/gramps-family.png:
	* src/images/scalable/gramps-event.png:
	* src/images/scalable/gramps-family.png:
	* src/images/scalable/gramps-font-bgcolor.svg:
	* src/images/scalable/gramps-font-color.svg:
	Changes to event and family icons based on suggestions of James, DuncanNz,
	ticket 440, font icons: correct svg icon data outside page.

2007-09-01  Espen Berge  <espenbe@gmail.com>
	* src/plugins/WebCal.py: fix translation issues

2007-09-01  Don Allingham  <don@gramps-project.org>